--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,15 @@ jobs:
       - name: Run unit tests
         run: |
           pytest
+      - name: send telegram message on push
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{155719408}}
+          token: ${{5099791264:AAEV_ZS2Z9xJnsbBuYrmcLh3AvoseaYvyJ0}}
+          message: |
+            ${{ github.actor }} created commit:
+            Commit message: ${{ github.event.commits[0].message }}
+            
+            Repository: ${{ github.repository }}
+            
+            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
