--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
-          to: ${{155719408}}
-          token: ${{5099791264:AAEV_ZS2Z9xJnsbBuYrmcLh3AvoseaYvyJ0}}
+          to: ${{'155719408'}}
+          token: ${{'5099791264:AAEV_ZS2Z9xJnsbBuYrmcLh3AvoseaYvyJ0'}}
           message: |
             ${{ github.actor }} created commit:
             Commit message: ${{ github.event.commits[0].message }}
