--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           pytest
       - name: send telegram message on push
-        if: ${{ pytest }}
+        if: pytest
         uses: appleboy/telegram-action@master
         with:
           to: ${{'155719408'}}
@@ -59,7 +59,7 @@ jobs:
             
             See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
       - name: send telegram message on push
-        if: ${{ !pytest }}
+        if: !pytest
         uses: appleboy/telegram-action@master
         with:
           to: ${{'155719408'}}
