--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
             
             See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
       - name: send telegram message on push
-        if: !pytest
+        if: false == pytest
         uses: appleboy/telegram-action@master
         with:
           to: ${{'155719408'}}
