--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,9 @@ jobs:
           pip install pytest
       - name: Run unit tests
         run: |
-          pytest
-      - name: send telegram message on push
-        if: pytest
+          echo pytest
+        id: testoutput
+      - name: send telegram message
         uses: appleboy/telegram-action@master
         with:
           to: ${{'155719408'}}
@@ -55,23 +55,9 @@ jobs:
             
             Repository: ${{ github.repository }}
             
-            Тесты прошли успешно
+            Тесты прошли успешно ${{ steps.testoutput.outputs.SELECTED_COLOR }}
             
             See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-      - name: send telegram message on push
-        if: false == pytest
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{'155719408'}}
-          token: ${{'5099791264:AAEV_ZS2Z9xJnsbBuYrmcLh3AvoseaYvyJ0'}}
-          message: |
-            ${{ github.actor }} created commit:
-            Commit message: ${{ github.event.commits[0].message }}
-            
-            Repository: ${{ github.repository }}
-            
-            Тесты прошли успешно
-            
-            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+ 
         
 
