--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,8 @@ jobs:
           pip install pytest
       - name: Run unit tests
         run: |
-          echo "::set-output name=testtext::$(pytest)"
+          pytest 
+          echo $?
         id: testoutput
       - name: send telegram message
         uses: appleboy/telegram-action@master
