--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
             Commit message: ${{ github.event.commits[0].message }}
             
             НЕ ОК
-            ${{ steps.testoutput.outputs.fails }}
+            ${{ steps.testoutput.outputs }}
             
             Repository: ${{ github.repository }}
             
