--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
             Commit message: ${{ github.event.commits[0].message }}
             
             Ошибка в тестах НЕ ОК
-            $(echo "::set-output name=ttest::$(pytest -rf)\n")
+            ${{ echo "::set-output name=ttest::$(pytest -rf)\n" }}
             
             Repository: ${{ github.repository }}
             
