--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
             Commit message: ${{ github.event.commits[0].message }}
             
             Ошибка в тестах НЕ ОК
-            ${{ steps.testoutput.outputs.testt }}
+            ${{ (steps.testoutput.outputs.testt) }}
             
             
             
