--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run unit tests
         run: |
         
-         pytest
+         pytest -rP
         
         id: testoutput1
         
